--- a/templates/web/location_html.phtml
+++ b/templates/web/location_html.phtml
@@ -1,171 +1,300 @@
 <option value="All|All|All" selected="selected">All</option>
 <option value="Canberra|ACT|Australia">Canberra - Australia</option>
+
 <option value="Central Coast|NSW|Australia">Central Coast - Australia</option>
+
 <option value="Hunter Valley|NSW|Australia">Hunter Valley - Australia</option>
+
 <option value="Lake Macquarie|NSW|Australia">Lake Macquarie - Australia</option>
+
 <option value="Newcastle|NSW|Australia">Newcastle - Australia</option>
+
 <option value="Port Stephens|NSW|Australia">Port Stephens - Australia</option>
+
 <option value="Regional Nsw|NSW|Australia">Regional Nsw - Australia</option>
+
 <option value="South Coast|NSW|Australia">South Coast - Australia</option>
 
 <option value="Sydney|NSW|Australia">Sydney - Australia</option>
+
 <option value="Northern Territory|NT|Australia">Northern Territory - Australia</option>
+
 <option value="Brisbane Region|QLD|Australia">Brisbane Region - Australia</option>
+
 <option value="Central & Western|QLD|Australia">Central & Western - Australia</option>
+
 <option value="Central Coastal|QLD|Australia">Central Coastal - Australia</option>
+
 <option value="Northern|QLD|Australia">Northern - Australia</option>
+
 <option value="South Eastern|QLD|Australia">South Eastern - Australia</option>
+
 <option value="Adelaide|SA|Australia">Adelaide - Australia</option>
 
 <option value="Far North|SA|Australia">Far North - Australia</option>
+
 <option value="Mid North|SA|Australia">Mid North - Australia</option>
+
 <option value="South|SA|Australia">South - Australia</option>
+
 <option value="Spencer Gulf & West Coast|SA|Australia">Spencer Gulf & West Coast - Australia</option>
+
 <option value="Tasmania|TAS|Australia">Tasmania - Australia</option>
+
 <option value="Greater Bendigo Region|VIC|Australia">Greater Bendigo Region - Australia</option>
+
 <option value="Macedon Ranges|VIC|Australia">Macedon Ranges - Australia</option>
+
 <option value="Melbourne|VIC|Australia">Melbourne - Australia</option>
 
 <option value="North Eastern|VIC|Australia">North Eastern - Australia</option>
+
 <option value="North Western|VIC|Australia">North Western - Australia</option>
+
 <option value="Shepparton & Central Nort|VIC|Australia">Shepparton & Central Nort - Australia</option>
+
 <option value="South Eastern Victoria|VIC|Australia">South Eastern Victoria - Australia</option>
+
 <option value="South Western Victoria|VIC|Australia">South Western Victoria - Australia</option>
+
 <option value="Northern|WA|Australia">Northern - Australia</option>
+
 <option value="Perth|WA|Australia">Perth - Australia</option>
+
 <option value="South East & Central|WA|Australia">South East & Central - Australia</option>
 
 <option value="South Western|WA|Australia">South Western - Australia</option>
-<option value="Calgary |Calgary |Canada">Calgary  - Canada</option>
-<option value="Edmonton |Edmonton |Canada">Edmonton  - Canada</option>
-<option value="Halifax |Halifax |Canada">Halifax  - Canada</option>
-<option value="Montreal |Montreal |Canada">Montreal  - Canada</option>
-<option value="Ottawa |Ottawa |Canada">Ottawa  - Canada</option>
-<option value="Brampton|Toronto |Canada">Brampton - Canada</option>
-<option value="City Of Toronto|Toronto |Canada">City Of Toronto - Canada</option>
-<option value="Durham Region|Toronto |Canada">Durham Region - Canada</option>
 
-<option value="Mississauga|Toronto |Canada">Mississauga - Canada</option>
-<option value="Oakville|Toronto |Canada">Oakville - Canada</option>
-<option value="York Region|Toronto |Canada">York Region - Canada</option>
-<option value="Vancouver |Vancouver |Canada">Vancouver  - Canada</option>
-<option value="Victoria |Victoria |Canada">Victoria  - Canada</option>
+<option value="Calgary|Calgary|Canada">Calgary - Canada</option>
+
+<option value="Edmonton|Edmonton|Canada">Edmonton - Canada</option>
+
+<option value="Halifax|Halifax|Canada">Halifax - Canada</option>
+
+<option value="Montreal|Montreal|Canada">Montreal - Canada</option>
+
+<option value="Ottawa|Ottawa|Canada">Ottawa - Canada</option>
+
+<option value="Brampton|Toronto|Canada">Brampton - Canada</option>
+
+<option value="City Of Toronto|Toronto|Canada">City Of Toronto - Canada</option>
+
+<option value="Durham Region|Toronto|Canada">Durham Region - Canada</option>
+
+<option value="Mississauga|Toronto|Canada">Mississauga - Canada</option>
+
+<option value="Oakville|Toronto|Canada">Oakville - Canada</option>
+
+<option value="York Region|Toronto|Canada">York Region - Canada</option>
+
+<option value="Vancouver|Vancouver|Canada">Vancouver - Canada</option>
+
+<option value="Victoria|Victoria|Canada">Victoria - Canada</option>
+
 <option value="Winnipeg|Winnipeg|Canada">Winnipeg - Canada</option>
-<option value="|Beijing |China"> - China</option>
-<option value="|Guangzhou |China"> - China</option>
 
-<option value="|Hangzhou |China"> - China</option>
-<option value="|Hong Kong |China"> - China</option>
-<option value="|Shanghai |China"> - China</option>
-<option value="|Shenzhen |China"> - China</option>
+<option value="Beijing|Beijing|China">Beijing - China</option>
+
+<option value="Guangzhou|Guangzhou|China">Guangzhou - China</option>
+
+<option value="Hangzhou|Hangzhou|China">Hangzhou - China</option>
+
+<option value="Hong Kong|Hong Kong|China">Hong Kong - China</option>
+
+<option value="Shanghai|Shanghai|China">Shanghai - China</option>
+
+<option value="Shenzhen|Shenzhen|China">Shenzhen - China</option>
+
 <option value="Cental London|London|England">Cental London - England</option>
+
 <option value="East London|London|England">East London - England</option>
+
 <option value="North East London|London|England">North East London - England</option>
 
 <option value="North London|London|England">North London - England</option>
+
 <option value="North West London|London|England">North West London - England</option>
+
 <option value="South East London|London|England">South East London - England</option>
+
 <option value="South London|London|England">South London - England</option>
+
 <option value="South West London|London|England">South West London - England</option>
+
 <option value="West London|London|England">West London - England</option>
-<option value="|Bordeaux|France"> - France</option>
-<option value="|Brittany|France"> - France</option>
 
-<option value="|Grenoble|France"> - France</option>
-<option value="|Lille|France"> - France</option>
-<option value="|Loire Valley|France"> - France</option>
-<option value="|Lyon|France"> - France</option>
-<option value="|Marseille|France"> - France</option>
-<option value="|Montpellier|France"> - France</option>
+<option value="Bordeaux|Bordeaux|France">Bordeaux - France</option>
 
-<option value="|Nice / Cote D'Azur|France"> - France</option>
-<option value="|Normandy|France"> - France</option>
-<option value="|Paris|France"> - France</option>
-<option value="|Strasbourg|France"> - France</option>
-<option value="|Toulouse|France"> - France</option>
-<option value=" |Berlin |Germany">  - Germany</option>
+<option value="Brittany|Brittany|France">Brittany - France</option>
 
-<option value=" |Bremen |Germany">  - Germany</option>
-<option value=" |Cologne |Germany">  - Germany</option>
-<option value=" |Dresden |Germany">  - Germany</option>
-<option value=" |Dusseldorf |Germany">  - Germany</option>
-<option value=" |Essen / Ruhr |Germany">  - Germany</option>
-<option value=" |Frankfurt |Germany">  - Germany</option>
+<option value="Grenoble|Grenoble|France">Grenoble - France</option>
 
-<option value=" |Hamburg |Germany">  - Germany</option>
-<option value=" |Hannover |Germany">  - Germany</option>
-<option value=" |Heidelberg |Germany">  - Germany</option>
-<option value=" |Leipzig |Germany">  - Germany</option>
-<option value=" |Munich |Germany">  - Germany</option>
-<option value=" |Stuttgart |Germany">  - Germany</option>
+<option value="Lille|Lille|France">Lille - France</option>
 
-<option value="|Esfahan|Iran"> - Iran</option>
-<option value="|Shiraz|Iran"> - Iran</option>
-<option value="|Tabriz|Iran"> - Iran</option>
+<option value="Loire Valley|Loire Valley|France">Loire Valley - France</option>
+
+<option value="Lyon|Lyon|France">Lyon - France</option>
+
+<option value="Marseille|Marseille|France">Marseille - France</option>
+
+<option value="Montpellier|Montpellier|France">Montpellier - France</option>
+
+<option value="Nice / Cote D'Azur|Nice / Cote D'Azur|France">Nice / Cote D'Azur - France</option>
+
+<option value="Normandy|Normandy|France">Normandy - France</option>
+
+<option value="Paris|Paris|France">Paris - France</option>
+
+<option value="Strasbourg|Strasbourg|France">Strasbourg - France</option>
+
+<option value="Toulouse|Toulouse|France">Toulouse - France</option>
+
+<option value="Berlin|Berlin|Germany">Berlin - Germany</option>
+
+<option value="Bremen|Bremen|Germany">Bremen - Germany</option>
+
+<option value="Cologne|Cologne|Germany">Cologne - Germany</option>
+
+<option value="Dresden|Dresden|Germany">Dresden - Germany</option>
+
+<option value="Dusseldorf|Dusseldorf|Germany">Dusseldorf - Germany</option>
+
+<option value="Essen / Ruhr|Essen / Ruhr|Germany">Essen / Ruhr - Germany</option>
+
+<option value="Frankfurt|Frankfurt|Germany">Frankfurt - Germany</option>
+
+<option value="Hamburg|Hamburg|Germany">Hamburg - Germany</option>
+
+<option value="Hannover|Hannover|Germany">Hannover - Germany</option>
+
+<option value="Heidelberg|Heidelberg|Germany">Heidelberg - Germany</option>
+
+<option value="Leipzig|Leipzig|Germany">Leipzig - Germany</option>
+
+<option value="Munich|Munich|Germany">Munich - Germany</option>
+
+<option value="Stuttgart|Stuttgart|Germany">Stuttgart - Germany</option>
+
+<option value="Esfahan|Esfahan|Iran">Esfahan - Iran</option>
+
+<option value="Shiraz|Shiraz|Iran">Shiraz - Iran</option>
+
+<option value="Tabriz|Tabriz|Iran">Tabriz - Iran</option>
+
 <option value="Tehran Center|Tehran|Iran">Tehran Center - Iran</option>
+
 <option value="Tehran East|Tehran|Iran">Tehran East - Iran</option>
+
 <option value="Tehran North|Tehran|Iran">Tehran North - Iran</option>
+
 <option value="Tehran South|Tehran|Iran">Tehran South - Iran</option>
 
 <option value="Tehran West|Tehran|Iran">Tehran West - Iran</option>
-<option value="|Fukuoka |Japan"> - Japan</option>
-<option value="|Hiroshima |Japan"> - Japan</option>
-<option value="|Nagoya |Japan"> - Japan</option>
-<option value="|Okinawa |Japan"> - Japan</option>
-<option value="|Osaka-Kobe-Kyoto |Japan"> - Japan</option>
 
-<option value="|Sapporo |Japan"> - Japan</option>
-<option value="|Tokyo |Japan"> - Japan</option>
-<option value="|Auckland|New Zealand"> - New Zealand</option>
-<option value="|Bay Of Plenty|New Zealand"> - New Zealand</option>
-<option value="|Canterbury|New Zealand"> - New Zealand</option>
-<option value="|Central North Island|New Zealand"> - New Zealand</option>
+<option value="Fukuoka|Fukuoka|Japan">Fukuoka - Japan</option>
 
-<option value="|Central Otago / Lakes|New Zealand"> - New Zealand</option>
-<option value="|Christchurch|New Zealand"> - New Zealand</option>
-<option value="|Coromandel|New Zealand"> - New Zealand</option>
-<option value="|Gisborne|New Zealand"> - New Zealand</option>
-<option value="|Hawkes Bay|New Zealand"> - New Zealand</option>
-<option value="|Manawatu / Wanganui|New Zealand"> - New Zealand</option>
+<option value="Hiroshima|Hiroshima|Japan">Hiroshima - Japan</option>
 
-<option value="|Marlborough|New Zealand"> - New Zealand</option>
-<option value="|Nelson & Bays|New Zealand"> - New Zealand</option>
-<option value="|Northland|New Zealand"> - New Zealand</option>
-<option value="|Otago|New Zealand"> - New Zealand</option>
-<option value="|Pacific Islands|New Zealand"> - New Zealand</option>
-<option value="|Southland|New Zealand"> - New Zealand</option>
+<option value="Nagoya|Nagoya|Japan">Nagoya - Japan</option>
 
-<option value="|Taranaki|New Zealand"> - New Zealand</option>
-<option value="|Waikato|New Zealand"> - New Zealand</option>
-<option value="|Wairarapa|New Zealand"> - New Zealand</option>
-<option value="|Wellington|New Zealand"> - New Zealand</option>
-<option value="|West Coast|New Zealand"> - New Zealand</option>
-<option value=" |Dubai|UAE">  - UAE</option>
+<option value="Okinawa|Okinawa|Japan">Okinawa - Japan</option>
+
+<option value="Osaka-Kobe-Kyoto|Osaka-Kobe-Kyoto|Japan">Osaka-Kobe-Kyoto - Japan</option>
+
+<option value="Sapporo|Sapporo|Japan">Sapporo - Japan</option>
+
+<option value="Tokyo|Tokyo|Japan">Tokyo - Japan</option>
+
+<option value="Auckland|Auckland|New Zealand">Auckland - New Zealand</option>
+
+<option value="Bay Of Plenty|Bay Of Plenty|Japan">Bay Of Plenty - Japan</option>
+
+<option value="Canterbury|Canterbury|Japan">Canterbury - Japan</option>
+
+<option value="Central North Island|Central North Island|Japan">Central North Island - Japan</option>
+
+<option value="Central Otago / Lakes|Central Otago / Lakes|Japan">Central Otago / Lakes - Japan</option>
+
+<option value="Christchurch|Christchurch|Japan">Christchurch - Japan</option>
+
+<option value="Coromandel|Coromandel|Japan">Coromandel - Japan</option>
+
+<option value="Gisborne|Gisborne|New Zealand">Gisborne - New Zealand</option>
+
+<option value="Hawkes Bay|Hawkes Bay|New Zealand">Hawkes Bay - New Zealand</option>
+
+<option value="Manawatu / Wanganui|Manawatu / Wanganui|New Zealand">Manawatu / Wanganui - New Zealand</option>
+
+<option value="Marlborough|Marlborough|New Zealand">Marlborough - New Zealand</option>
+
+<option value="Nelson & Bays|Nelson & Bays|New Zealand">Nelson & Bays - New Zealand</option>
+
+<option value="Northland|Northland|New Zealand">Northland - New Zealand</option>
+
+<option value="Otago|Otago|New Zealand">Otago - New Zealand</option>
+
+<option value="Pacific Islands|Pacific Islands|New Zealand">Pacific Islands - New Zealand</option>
+
+<option value="Southland|Southland|New Zealand">Southland - New Zealand</option>
+
+<option value="Taranaki|Taranaki|New Zealand">Taranaki - New Zealand</option>
+
+<option value="Waikato|Waikato|New Zealand">Waikato - New Zealand</option>
+
+<option value="Wairarapa|Wairarapa|New Zealand">Wairarapa - New Zealand</option>
+
+<option value="Wellington|Wellington|New Zealand">Wellington - New Zealand</option>
+
+<option value="West Coast|West Coast|New Zealand">West Coast - New Zealand</option>
+
+<option value="Dubai|Dubai|UAE">Dubai - UAE</option>
 
 <option value="Phoenix|Arizona|USA">Phoenix - USA</option>
+
 <option value="Los Angeles|California|USA">Los Angeles - USA</option>
+
 <option value="Orange County|California|USA">Orange County - USA</option>
+
 <option value="Sacramento|California|USA">Sacramento - USA</option>
+
 <option value="San Diego|California|USA">San Diego - USA</option>
+
 <option value="San Francisco Bay Area|California|USA">San Francisco Bay Area - USA</option>
+
 <option value="Denver|Colorado|USA">Denver - USA</option>
+
 <option value="Miami|Florida|USA">Miami - USA</option>
+
 <option value="Atlanta|Georgia|USA">Atlanta - USA</option>
 
 <option value="Honolulu|Hawaii|USA">Honolulu - USA</option>
+
 <option value="Houston|Houston|USA">Houston - USA</option>
+
 <option value="Chicago|Illinois|USA">Chicago - USA</option>
+
 <option value="Boston|Massachusetts|USA">Boston - USA</option>
+
 <option value="Detroit|Michigan|USA">Detroit - USA</option>
+
 <option value="Minneapolis|Minnesota|USA">Minneapolis - USA</option>
-<option value="St Louis|Missouri |USA">St Louis - USA</option>
+
+<option value="St Louis|Missouri|USA">St Louis - USA</option>
+
 <option value="Las Vegas|Nevada|USA">Las Vegas - USA</option>
+
 <option value="New York|New York|USA">New York - USA</option>
 
 <option value="Raleigh|North Carolina|USA">Raleigh - USA</option>
-<option value="Portland|Oregon |USA">Portland - USA</option>
+
+<option value="Portland|Oregon|USA">Portland - USA</option>
+
 <option value="Philadelphia|Pennsylvania|USA">Philadelphia - USA</option>
+
 <option value="Austin|Texas|USA">Austin - USA</option>
+
 <option value="Dallas|Texas|USA">Dallas - USA</option>
+
 <option value="Seattle|Washington|USA">Seattle - USA</option>
+
 <option value="Washington Dc|Washington Dc|USA">Washington Dc - USA</option>
