--- a/application/views/scripts/jobs/index.phtml
+++ b/application/views/scripts/jobs/index.phtml
@@ -1,4 +1,4 @@
-<?php echo $this->searchResults($this->paramsHolder->cat1, $this->category, $this->paramsHolder->region, $this->paramsHolder->city);?>
+<?php echo $this->searchResults($this->paramsHolder->cat1, $this->category, $this->paramsHolder->region, $this->paramsHolder->city, $this->paramsHolder->state, $this->paramsHolder->country);?>
 <div class="formandresultlistwrap">
 	<div class="refineformwrap">
 		<?php echo $this->form->populate(Common::stdClassToArray($this->paramsHolder));?>
