--- a/style/common.css
+++ b/style/common.css
@@ -283,13 +283,13 @@ div.formandresultlistwrap{
 div.formandresultlistwrap div.refineformwrap{
 	float:left;
 	margin-left:0px;
-	width:220px;
+	width:240px;
 	margin-right:20px;
 }
 div.formandresultlistwrap div.resultlistwrap{
 	float:right;
 	margion-right:0px;
-	width:710px;
+	width:690px;
 	test-align:left;
 }
 
@@ -340,10 +340,23 @@ div.refineform div.formbot div.formbotleft{
 }
 
 input.refineforminput, select.refineformselect{
-	width:180px;
+	width:200px;
 	font-size:12px;
 }
+select.refineformmoneyselect{
+	width:60px;
+	font-size:12px;
+}
+span.facilityselect{
+	width:60px;
+	font-size:14px;
+	display:inline-block;
+	margin-right:10px;
+}
 
+div.facilityselectdiv{
+	margin-top:0px;
+}
 /* for radio box's option label and value */
 div.refineform div.cat1 input.refineformselect{
 	margin-right:20px;
@@ -354,7 +367,7 @@ div.refineform dt{
 }
 div.refineform dd{
 	margin-left:0px;
-	margin-bottom:10px;
+	margin-bottom:0px;
 }
 div.refineform div.quicksearchbtn, div.refineform div.submitbtn{
 	text-align:right;
@@ -379,6 +392,9 @@ div.resultlistwrap div.centercolumn{
 	display:block;
 	float:left;
 }
+table.resultheader{
+	width:100%;
+}
 div.resultlistwrap div.rightcolumn{
 
 }	
@@ -398,10 +414,20 @@ div.resultlistwrap div.botright{
     background-image: url(../images/sitetemplate/rightbotcorner.jpg);		
 }
 
+div.resultlistwrap div.resultwrap{
+  	background-image: url(../images/sitetemplate/resulthead.png);
+  	background-position: 0 0;
+  	background-repeat:no-repeat;	
+  	padding:2px 15px 6px 15px;
+}	
+
 div.resultlistwrap div.botbar{
+  	background-image: url(../images/sitetemplate/resultbot.png);
+  	background-position: 0 0;
+  	background-repeat:no-repeat;	
+  		
 	width:100%;
-	height:27px;
-	background-color:#ccc;
+	height:29px;
 }
 
 div.resultlistwrap div.topbar{
@@ -439,7 +465,7 @@ div.resultlistwrap span.date{
 	width:100px;
 }
 div.resultlistwrap span.title{
-	width:320px;
+	width:200px;
 }
 div.resultlistwrap span.category{
 	width:200px;
@@ -447,17 +473,23 @@ div.resultlistwrap span.category{
 div.resultlistwrap span.other{
 	width:50px;
 }
-div.resultlistwrap div.postingrow{
-	padding:5px 0px 5px 0px;
-	margin:0px 13px 0px 11px;
-	border-bottom:#ccc 1px solid;
+div.resultlistwrap tr.postingrow{
 }
 
+div.resultlistwrap td{
+	padding:10px 0px 10px 0px;
+	border-bottom:#ccc 1px solid;
+}
+ div.resultlistwrap th{
+ 	font-size:14px;
+ 	padding:5px 0px 5px 0px;
+}
+ 
 div.resultsummary{
 	font-wight:bold;
 	text-align:center;
 	font-style:italic;
-	margin:10px 0px 0px 10px;
+	margin:8px 0px 0px 10px;
 }
 div.pagination{
 	width:670px;
@@ -468,6 +500,22 @@ div.pagination div.paginatorsummary{
 }
 div.pagination div.paginator{
 	float:right;
+}
+
+div.priceselectdivbox span.min{
+	margin-right:16px;
+}
+
+div.refineform div.priceselectdivtitle{
+	margin-bottom: 0px;
+}
+div.virticalgap{
+	height:6px;
+}
+div.quicksearch, div.cat1, div.cat2, div.cat3
+div.cat4, div.cat5, div.cat6, div.priceselectdiv, div.facilityselectdiv
+{
+	margin-bottom: 10px;
 }
 
 
