--- a/application/views/scripts/information/index.phtml
+++ b/application/views/scripts/information/index.phtml
@@ -8,7 +8,7 @@
 			<div class="left">
 				<div class="headings2">
 				<?php
-					$this->printHeadings2($this->business->getHeadings2($this->paramsHolder->headingid));
+					//$this->printHeadings2($this->business->getHeadings2($this->paramsHolder->headingid));
 				?>
 					<div class="clear"></div>
 				</div>
@@ -19,7 +19,7 @@
 			<div class="right">
 				<div class="headings">
 				<?php
-					$this->printHeadings($this->business->getHeadings(), $this->paramsHolder->headingid, $this->paramsHolder);
+					//$this->printHeadings($this->business->getHeadings(), $this->paramsHolder->headingid, $this->paramsHolder);
 				?>
 				</div>
 			</div>
