--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,5 +1,11 @@
 <div class="homepagelogowrap">
-	<center><div class="homepagelogo"></div></center>
+	<center>
+	<div class="infolink">
+	<a href="/Information/Sydney/NSW/Australia/Aus28"><img src="images/sitetemplate/nsw-sydney-click-here.png"></a>
+	</div>
+	<div class="homepagelogo"></div>
+	<div class="clear"></div>
+	</center>
 </div>
 <div class="homepagesearchpanel">
 <center>
